Unify `<select>` styling and remove `.chrome-select`.
With this CL, we remove the `.chrome-select` CSS class and the two
different ways of styling a `<select>` element (excluding the completely
custom thing in the Recorder panel), and only have one set of styles
that we use consistently for all `<select>` elements (modulo the one in
the Recorder panel b/c LitElement), independent of whether the
`<select>` is used in a toolbar or elsewhere.

That means we can now simply put a `<select>` directly into a
`<devtools-toolbar>` and it will work as expected.

Drive-by-fix: Skip the test from crbug.com/383478771 completely now,
since even though the `<select>` in the Recorder panel is unaffected
by these changes, some surrounding (likely) timing changes now make that
test fail consistently, not only on Mac.

Bug: 383478771, 388445687
Change-Id: I01d7835d5858cac8863a7337a8e43a49b55820f2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6163607
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/network/networkConfigView.css
+++ b/front_end/panels/network/networkConfigView.css
@@ -54,7 +54,7 @@
 }
 /* Network throttling */
 
-.network-config-throttling .chrome-select {
+.network-config-throttling select {
   width: 100%;
   max-width: 250px;
 }
@@ -74,11 +74,11 @@
 }
 
 .network-config-ua input[type="text"],
-.network-config-ua .chrome-select {
+.network-config-ua select {
   margin-top: 8px;
 }
 
-.network-config-ua .chrome-select {
+.network-config-ua select {
   width: calc(100% - 20px);
   max-width: 250px;
 }
