[cleanup] Remove `Toolbar.orientation`.
We really misused vertical toolbars in the past, as a way to build the
UI of the settings panes within the Network, Console, and Performance
panels.
These weren't really toolbars, and there's also no good reason to even
need the toolbar here, since what we really want is a stupid grid.

Bug: 388445687
Change-Id: Ibd531823c5e5ad09829630656409a1e32b5d43ec
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6164904
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/console/consoleView.css
+++ b/front_end/panels/console/consoleView.css
@@ -55,13 +55,11 @@
 }
 
 .console-settings-pane {
+  display: grid;
+  grid-template-columns: 50% 50%;
   flex: none;
   background-color: var(--sys-color-cdt-base-container);
   border-bottom: 1px solid var(--sys-color-divider);
-}
-
-.console-settings-pane devtools-toolbar {
-  flex: 1 1;
 }
 
 #console-messages {
