--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -42,9 +42,24 @@
 }
 
 .timeline-settings-pane {
+  display: grid;
+  grid-template-columns: 50% 50%;
   flex: none;
   background-color: var(--sys-color-cdt-base-container);
   border-bottom: 1px solid var(--sys-color-divider);
+
+  & > div {
+    margin-left: 5px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+
+    & > select {
+      height: var(--sys-size-9);
+      min-width: var(--sys-size-14);
+      border: none;
+    }
+  }
 }
 
 #timeline-overview-panel {
