Fix Performance/Network panel toolbar.
The Network and Performance panels keep the settings button on the
right always, even when the rest of the toolbar items wrap around.
This fixes the CSS to restore this looks.

Fixed: 388956590
Bug: 388445687
Change-Id: I302720c1325eca73ca5f81b2af2803df775cfd85
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6171170
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/network/networkPanel.css
+++ b/front_end/panels/network/networkPanel.css
@@ -157,15 +157,12 @@
 .network-toolbar-container {
   display: flex;
   flex: none;
-}
-
-.network-toolbar-container > :first-child {
-  flex: 1 1 auto;
-}
-
-.panel.network devtools-toolbar {
   background-color: var(--sys-color-cdt-base-container);
   border-bottom: 1px solid var(--sys-color-divider);
+
+  & > :first-child {
+    flex: 1 1 auto;
+  }
 }
 
 @media (forced-colors: active) {
