--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -30,15 +30,12 @@
 .timeline-toolbar-container {
   display: flex;
   flex: none;
-}
-
-.timeline-toolbar-container > devtools-toolbar {
   background-color: var(--sys-color-cdt-base-container);
   border-bottom: 1px solid var(--sys-color-divider);
-}
 
-.timeline-main-toolbar {
-  flex: 1 1 auto;
+  & > :first-child {
+    flex: 1 1 auto;
+  }
 }
 
 .timeline-settings-pane {
