[GM3Restyling] Update DOM breakpoint empty states
This CL introduces general css classes for empty states and updates
the DOM breakpoint empty states UI.

Before: https://i.imgur.com/bMeGCqE.png
After: https://i.imgur.com/CDKRE7o.png
Bug: 325443331
Change-Id: Iee914e2d9441b536953ca7233311edc8dd8c7398
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6152575
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -554,6 +554,37 @@ select option {
   white-space: nowrap;
 }
 
+/* General empty state styles */
+.empty-state {
+  margin: var(--sys-size-5);
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  min-height: fit-content;
+  min-width: fit-content;
+
+  > * {
+    max-width: var(--sys-size-29);
+  }
+
+  .header {
+    font: var(--sys-typescale-headline5);
+    margin-bottom: var(--sys-size-3);
+  }
+
+  .description {
+    font: var(--sys-typescale-body4-regular);
+    color: var(--sys-color-on-surface-subtle);
+
+    > x-link {  /* stylelint-disable-line selector-type-no-unknown */
+      margin-left: var(--sys-size-3);
+    }
+  }
+}
+
 dt-icon-label {
   flex: none;
 }
