--- a/front_end/panels/browser_debugger/domBreakpointsSidebarPane.css
+++ b/front_end/panels/browser_debugger/domBreakpointsSidebarPane.css
@@ -4,6 +4,10 @@
  * found in the LICENSE file.
  */
 
+.dom-breakpoints-container {
+  overflow: auto;
+}
+
 .breakpoint-list {
   padding-bottom: 3px;
 }
