[GM3Restyling] Update command menu open file
Screenshot: https://imgur.com/a/abgDlDT

Bug: 325442580
Change-Id: I42d65be379bbbf7a1af7529bf648a52c19c9377d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6172332
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/components/text_prompt/textPrompt.css
+++ b/front_end/ui/components/text_prompt/textPrompt.css
@@ -11,11 +11,13 @@
 }
 
 input {
-  font-size: 14px;
+  font-size: var(--sys-typescale-body3-size);
 }
 
 .prefix {
   flex: none;
+  font-weight: var(--ref-typeface-weight-medium);
+  font-size: var(--sys-typescale-body3-size);
   color: var(--sys-color-primary);
 }
 
@@ -33,10 +35,12 @@ input {
   padding: 0;
   z-index: 2;
   background-color: transparent;
+  line-height: var(--sys-typescale-body3-line-height);
 }
 
 .text-prompt-input .suggestion {
   color: var(--sys-color-on-surface-subtle);
+  line-height: var(--sys-typescale-body3-line-height);
   position: absolute;
   left: 0;
   z-index: 1;
