[protocol_monitor] Fix editor bottom toolbar.
The `UI.Toolbar.Toolbar` refactoring accidentally broke the bottom
toolbar of the Protocol Monitor editor sidebar pane.

This refactors the `JSONEditor` component to use `devtools-toolbar` now
and as a nice side effect, also removes the overly specific custom
element `devtools-pm-toolbar` that was basically just showing two
buttons.

Fixed: 389881438
Bug: 388445687
Change-Id: I22847727eaa7ca49b2c03e43e855bf279b6aff6b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6172798
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/protocol_monitor/components/JSONEditor.css
+++ b/front_end/panels/protocol_monitor/components/JSONEditor.css
@@ -12,7 +12,8 @@
 }
 
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
   height: 100%;
 }
 
@@ -88,4 +89,8 @@ ul {
 .row:hover .add-button,
 .row:hover .clear-button {
   opacity: 100%;
+}
+
+devtools-toolbar {
+  border-top: 1px solid var(--sys-color-divider);
 }
