[cleanup] Remove `LitElement` dependency from Protocol Monitor.
The `JSONEditor` was previously using `LitElement`, which is not in line
with how we want to build UI in the future. This does the minimal
changes to turn it into a `UI.Widget.Widget` instead and also fixes the
build dependencies accordingly.

Bug: 390071004, 301364727
Change-Id: Ia01fb731e437ffb6fd8c435b905fe5973ad5f48a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6170726
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/protocol_monitor/JSONEditor.css
+++ b/front_end/panels/protocol_monitor/JSONEditor.css
@@ -91,6 +91,6 @@ ul {
   opacity: 100%;
 }
 
-devtools-toolbar {
+.protocol-monitor-sidebar-toolbar {
   border-top: 1px solid var(--sys-color-divider);
 }
