[AIAssistance] Simplify input shadow animation based on scroll
Previously, there were 2 things:
* We were setting the visibility depending on the scrollable
status of the container.
* We were updating the opacity of the shadow based on the
scroll status of the container.

We don't need to do these 2 things and we can go with
only setting the opacity when the animation is active
and setting it to `0` for the cases when the animation is
not active.

Bug: 373832540
Change-Id: I12f6eac31ba7636faa3c2dce33989bfaf7c53992
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6174730
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Samiya Caur <samiyac@chromium.org>

--- a/front_end/panels/ai_assistance/components/chatView.css
+++ b/front_end/panels/ai_assistance/components/chatView.css
@@ -73,14 +73,9 @@
       height: 100%;
       box-shadow: 0 -3px 2px -2px var(--app-color-ai-assistance-input-divider);
       animation: reveal;
+      opacity: 0%;
       /* stylelint-disable-next-line property-no-unknown */
       animation-timeline: --scroll-timeline;
-      animation-fill-mode: both;
-
-      --visibility-if-can-scroll: var(--can-scroll) visible;
-      --visibility-if-cant-scroll: hidden;
-
-      visibility: var(--visibility-if-can-scroll, var(--visibility-if-cant-scroll));
     }
   }
 }
@@ -528,9 +523,6 @@ main {
 
   /* stylelint-disable-next-line property-no-unknown */
   scroll-timeline: --scroll-timeline y;
-  animation: detect-scroll;
-  /* stylelint-disable-next-line property-no-unknown */
-  animation-timeline: --scroll-timeline;
 }
 
 .empty-state-container {
@@ -689,9 +681,4 @@ main {
   100% {
     opacity: 0%;
   }
-}
-
-@keyframes detect-scroll {
-  from,
-  to { --can-scroll: ; }
 }
