[GM3Restyling] Update run command menu
Also add a script that given an image name adds required image paths to
devtools_image_files.gni and devtools_grd_files.gni

Screenshot: https://imgur.com/a/MaU8tFD

Bug: 325442580
Change-Id: I13d1af601c5534507f5303608fc28faf612c7d3a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6170727
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>

--- a/front_end/ui/legacy/components/quick_open/filteredListWidget.css
+++ b/front_end/ui/legacy/components/quick_open/filteredListWidget.css
@@ -70,6 +70,8 @@ devtools-text-prompt {
 .filtered-list-widget-item-wrapper devtools-icon {
   align-self: center;
   flex: none;
+  width: 18px;
+  height: 18px;
 }
 
 .filtered-list-widget-item-wrapper.selected {
@@ -119,10 +121,8 @@ devtools-text-prompt {
 }
 
 .filtered-list-widget-item-wrapper .tag {
-  padding: 0 12px;
-  border-radius: 4px;
-  line-height: 24px;
-  height: 24px;
+  font-size: var(--sys-typescale-body5-size);
+  line-height: var(--sys-typescale-headline5-line-height);
   align-self: center;
   flex-shrink: 0;
 }
@@ -139,15 +139,13 @@ devtools-text-prompt {
 }
 
 .filtered-list-widget-item.one-row {
-  height: 36px;
-  line-height: 20px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  line-height: var(--sys-typescale-body3-line-height);
+  align-content: center;
   display: flex;
 }
 
 .filtered-list-widget-item.one-row .filtered-list-widget-title {
-  padding-right: 8px;
+  display: flex;
 }
 
 .filtered-list-widget-item.two-rows {
