--- a/front_end/ui/components/text_prompt/textPrompt.css
+++ b/front_end/ui/components/text_prompt/textPrompt.css
@@ -34,6 +34,7 @@ input {
   left: 0;
   padding: 0;
   z-index: 2;
+  color: var(--sys-color-on-surface);
   background-color: transparent;
   line-height: var(--sys-typescale-body3-line-height);
 }
