[RPP] Include first party and extension badge for 3p table
https://screenshot.googleplex.com/9gkRsbanfZgLwz6

Bug:383567961
Change-Id: Ie31220369d88329765c9fee4d62c34a748088862
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6160474
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Adriana Ixba <aixba@chromium.org>

--- a/front_end/panels/timeline/components/timelineSummary.css
+++ b/front_end/panels/timeline/components/timelineSummary.css
@@ -96,3 +96,26 @@
   padding: var(--sys-size-4) var(--sys-size-8) var(--sys-size-4);
   gap: var(--sys-size-5);
 }
+
+.name-container {
+  display: flex;
+  align-items: center;
+}
+
+.entity-badge {
+  margin-left: var(--sys-size-4);
+}
+
+.entity-badge-name {
+  font-weight: var(--ref-typeface-weight-bold);
+  padding-left: var(--sys-size-3);
+  padding-right: var(--sys-size-3);
+  background-color: var(--sys-color-tonal-container);
+  border-radius: var(--sys-shape-corner-extra-small);
+}
+
+.activity-name {
+  text-overflow: ellipsis;
+  overflow: inherit;
+  max-width: 60%;
+}
