[GM3Restyling] Update a number of EmptyWidget view titles
This updates the empty widget view headers from:

ServiceWorkerCacheViews.ts
LayerDetailsView.ts
ResourceWebSocketFrameView.ts
DataGridWithPreview.ts

They all provide a panel for viewing their content (message, cache, ..).

Screenshot: https://imgur.com/a/3yrNaax
Bug: 325443331
Change-Id: I0d753e5d2fae02dc98da26a24462decdce8fb500
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6170715
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/layer_viewer/layerDetailsView.css
+++ b/front_end/panels/layer_viewer/layerDetailsView.css
@@ -4,6 +4,10 @@
  * found in the LICENSE file.
  */
 
+.layer-details-container:has(.empty-view-scroller) {
+  display: flex;
+}
+
 table td {
   padding-left: 8px;
 }
