[GM3Restyling] Update run snippet menu
Screenshot: https://imgur.com/a/ts9SqxO

Bug: 325442580
Change-Id: I596f525be55e1a83fc04654ce09b58968a890bcc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6170729
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/legacy/components/quick_open/filteredListWidget.css
+++ b/front_end/ui/legacy/components/quick_open/filteredListWidget.css
@@ -72,6 +72,10 @@ devtools-text-prompt {
   flex: none;
   width: 18px;
   height: 18px;
+
+  &.snippet {
+    color: var(--sys-color-orange-bright);
+  }
 }
 
 .filtered-list-widget-item-wrapper.selected {
@@ -96,7 +100,7 @@ devtools-text-prompt {
 }
 
 .filtered-list-widget-item.one-row span.highlight {
-  font-weight: bold;
+  font-weight: var(--ref-typeface-weight-bold);
 }
 
 .filtered-list-widget-item .filtered-list-widget-title {
@@ -130,12 +134,6 @@ devtools-text-prompt {
 .filtered-list-widget-item-wrapper .deprecated-tag {
   font-size: 11px;
   color: var(--sys-color-token-subtle);
-}
-
-
-.filtered-list-widget-item-wrapper.selected .filtered-list-widget-item span.highlight {
-  color: var(--sys-color-on-tonal-container);
-  background-color: var(--sys-color-state-focus-select);
 }
 
 .filtered-list-widget-item.one-row {
