Remove text greying and fix text colors
1. Text no longer is greyed when the checkbox is disabled.
2. Main text and the subtext are now their correct colors.

New appearance: https://screenshot.googleplex.com/5b3Q87GyK4ihHz8.png

Bug: 390224867, 375352611
Change-Id: If8da380a551afe45786e755afe405f22daa86dad
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6179860
Commit-Queue: Jalon Thomas <jalonthomas@google.com>
Reviewed-by: Shuran Huang <shuuran@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/security/cookieControlsView.css
+++ b/front_end/panels/security/cookieControlsView.css
@@ -100,6 +100,10 @@ input[type="checkbox"] {
   flex-shrink: 0;
 }
 
-.faded {
-  color: var(--sys-color-token-subtle);
+.main-text {
+  color: var(--sys-color-on-surface);
+}
+
+.subtext {
+  color: var(--sys-color-on-surface-subtle);
 }
