[RPP] Add badge test for 3p table
drive by css adjustment to table: adds borders from the mocks

Bug:None
Change-Id: I5998a64e2bc6a31e4d0f9be44cab3766beddb218
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6178845
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Adriana Ixba <aixba@chromium.org>

--- a/front_end/panels/timeline/components/timelineSummary.css
+++ b/front_end/panels/timeline/components/timelineSummary.css
@@ -84,6 +84,10 @@
   th {
     background-color: var(--sys-color-cdt-base-container);
   }
+
+  tr.revealed.selected {
+    background-color: transparent;
+  }
 }
 
 .widget.vbox.timeline-tree-view {
@@ -93,8 +97,12 @@
 
 .third-party-table {
   display: flex;
-  padding: var(--sys-size-4) var(--sys-size-8) var(--sys-size-4);
-  gap: var(--sys-size-5);
+  margin: var(--sys-size-4) var(--sys-size-8) var(--sys-size-4);
+  padding-left: var(--sys-size-4);
+  padding-right: var(--sys-size-4);
+  border-left: var(--sys-size-1) solid var(--sys-color-divider);
+  border-right: var(--sys-size-1) solid var(--sys-color-divider);
+  max-width: var(--sys-size-35);
 }
 
 .name-container {
