[ui] Introduce `floating` attribute on `Toolbar`.
This adds a `floating` attribute/property to `<devtools-toolbar>`, which
we use for long-click button overlays. Also consolidates and simplifies
the styling a bit.

Bug: 388445687
Change-Id: I322d5506665f060c5514c057bd1c7c3419239549
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6182140
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -1112,22 +1112,12 @@ devtools-toolbar {
     background-color: var(--sys-color-surface-variant);
   }
 
-  &.floating {
-    flex-direction: column;
-    height: auto;
-    background-color: var(--sys-color-cdt-base-container);
-    border: 1px solid var(--sys-color-divider);
-    margin-top: -1px;
-    width: 28px;
-    left: -2px;
-  }
-
-  &:not(.floating) > :last-child:not(:first-child, select) {
+  &:not([floating]) > :last-child:not(:first-child, select) {
     flex-shrink: 1;
     justify-content: left;
   }
 
-  &:not(.floating) > .toolbar-button:last-child:not(:first-child, select) {
+  &:not([floating]) > .toolbar-button:last-child:not(:first-child, select) {
     justify-content: left;
     margin-right: 2px;
   }
