[ui] Fix `<devtools-toolbar>` height computation.
Put the `--toolbar-height` onto the content element rather than the host
element, as otherwise the bottom border will be within the height.

Fixed: 390588608
Bug: 388445687
Change-Id: I5bb8c563e9b4b528dfdb2bf46cd415441fe0c458
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6177751
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -17,10 +17,6 @@
   --toolbar-height: 26px;
 }
 
-:host(:not([floating], [wrappable])) {
-  height: var(--toolbar-height);
-}
-
 :host([floating]) {
   flex-direction: column;
   inset: 0;
@@ -37,4 +33,8 @@
 :host([wrappable]) {
   flex-wrap: wrap;
   overflow: visible;
+}
+
+slot {
+  height: var(--toolbar-height);
 }
