Wrap UI.DataGrid into a web component and migrate developer resources to it
Bug: 390346490
Change-Id: I55eed34f835d436ae3ec08e432a40ab26e6fd19c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6171004
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/developer_resources/developerResourcesListView.css
+++ b/front_end/panels/developer_resources/developerResourcesListView.css
@@ -8,25 +8,21 @@
   border: none;
 }
 
-.data-grid td .url-outer {
+::part(url-outer) {
   width: 100%;
   display: inline-flex;
   justify-content: flex-start;
 }
 
-.data-grid td .url-outer .filter-highlight {
+::part(filter-highlight) {
   font-weight: bold;
 }
 
-.data-grid td .url-prefix {
+::part(url-prefix) {
   overflow-x: hidden;
   text-overflow: ellipsis;
 }
 
-.data-grid td .url-suffix {
+::part(url-suffix) {
   flex: none;
-}
-
-.data-grid td.error-message .filter-highlight {
-  font-weight: bold;
 }
