[Switch] Fix not rendering colors correctly when forced colors is active
Screenshot: https://imgur.com/a/pqoX7jP

Fixed: 380487910
Change-Id: If693f17b0538e2aef2534cb39258c55257604d03
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6182302
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/components/switch/switch.css
+++ b/front_end/ui/components/switch/switch.css
@@ -90,3 +90,21 @@ input:disabled:checked {
     background-color: var(--sys-color-surface);
   }
 }
+
+@media (forced-colors: active) {
+  .slider::before,
+  input:checked + .slider::before {
+    background-color: ButtonText;
+  }
+
+  input:disabled:not(:checked) + .slider,
+  input:disabled:checked + .slider {
+    background-color: transparent;
+    border-color: GrayText;
+  }
+
+  input:disabled:not(:checked) + .slider::before,
+  input:disabled:checked + .slider::before {
+    background-color: GrayText;
+  }
+}
