--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -139,7 +139,7 @@
   display: flex;
   flex-direction: column;
   flex: 1 0 300px;
-  overflow: auto;
+  overflow: hidden;
   max-height: max-content;
 
   --app-color-toolbar-background: transparent;
