[RPP] Add related elements to DOM size insight
https://screenshot.googleplex.com/77JSbU8uKGZ9YGC

This also removes the DOM size insight from the experimental list since
it is now feature-complete.

Bug: 372897811
Change-Id: Id66bcd103fcaef4569d111ef787cd6582b873d54
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6182528
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/insights/baseInsightComponent.css
+++ b/front_end/panels/timeline/components/insights/baseInsightComponent.css
@@ -92,10 +92,11 @@
 
 .insight-section {
   padding-top: var(--sys-size-5);
+  margin-top: var(--sys-size-5);
 }
 
 .insight-description:not(:empty) {
-  padding-bottom: var(--sys-size-5);
+  margin-bottom: var(--sys-size-5);
 }
 
 .insight-section:not(:empty) {
