Use `<devtools-new-data-grid>` in `EndpointsGrid`.
Bug: 390346490
Change-Id: I5772e9131c65739102ab382c714c2690c3e7e8c3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6179488
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/application/components/reportingApiGrid.css
+++ b/front_end/panels/application/components/reportingApiGrid.css
@@ -32,8 +32,8 @@
   text-align: center;
 }
 
-devtools-data-grid-controller {
-  border: 1px solid var(--sys-color-divider);
+devtools-new-data-grid {
+  flex: auto;
 }
 
 .inline-icon {
