Use heading elements for headings in MarkdownInsightRenderer
Use HTML heading elements instead of `<strong>` for rendering
markdown headings in the MarkdownInsightRenderer. All `<h1>` - `<h6>`
tags are styled to match the previous `<strong>` styling.

Bug: 365835615
Change-Id: I07cf6189c3c3124fbbdd42098e2cf6ddd08f6c69
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6179443
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/ui/components/markdown_view/markdownView.css
+++ b/front_end/ui/components/markdown_view/markdownView.css
@@ -79,3 +79,8 @@ devtools-code-block {
   text-decoration: underline;
   cursor: pointer;
 }
+
+h1.insight, h2.insight, h3.insight, h4.insight, h5.insight, h6.insight {
+  font: var(--sys-typescale-body4-bold);
+  margin: var(--sys-size-1) 0 10px;
+}
